<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.ravenchat.amar0_000.raven.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/default_avatar" />

    <Button
        android:id="@+id/settings_status_btn"
        android:layout_width="164dp"
        android:layout_height="54dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/change_status"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/settings_image_btn" />

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_width="164dp"
        android:layout_height="54dp"
        android:layout_marginBottom="11dp"
        android:text="@string/change_image"
        android:textColor="@color/colorPrimaryDark"
        android:layout_above="@+id/settings_status_btn"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/display_name"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        android:layout_below="@+id/settings_image"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/hi_there_i_m_using_the_raven_application"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="14sp" />

</RelativeLayout>
